Make sure long URLs wrap in forum replies and blog comments

--- a/app/assets/stylesheets/objects/broadcasts.scss
+++ b/app/assets/stylesheets/objects/broadcasts.scss
@@ -191,6 +191,7 @@
   padding-bottom: 10px;
   padding-left: 0;
   padding-top: 10px;
+  word-wrap: break-word;
 
   img {
     max-height: 100px;
